# Habana_Custom_Kernel

./: CMakeLists.txt  meson.build
kernels/: CMakeLists.txt  build.sh
kernels/gaudi/: leakyrelu_f32_gaudi.c  searchsorted_fwd_f32.c  softmax_non_fcd_bf16.c
kernels/include/: reinterpret_fwd_i32.h
scripts/pytorch_custom_op/: custom_reinterpret.py  custom_searchsorted.py  hpu_custom_op_searchsorted_test.py  hpu_custom_reinterpret.cpp  setup.py
src/: entry_points.cpp  entry_points.hpp  meson.build
src/gaudi2_src/: reinterpret_fwd_i32.cpp  reinterpret_fwd_i32.hpp
tests/: CMakeLists.txt  meson.build  tensor.h  test_base.cpp  test_base.hpp  tests_main.cpp
tests/gaudi2_test/: avg_pool_2d_f32_gaudi2_test.cpp  reinterpret_fwd_i32_gaudi2_test.cpp  reinterpret_fwd_i32_gaudi2_test.hpp
tests/gaudi_test/: add_f32_test.cpp  add_f32_test.hpp  relu6_all_test.cpp  relu6_all_test.hpp
